# oakd-research

./: .env  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  build_and_run.sh  displayPipeline.py  docker-compose.yml  env.yml  main.py  requirements.txt  segmentation_labels.py  setup.cfg  setup.py  utils.py
.github/workflows/: python-package.yml  static.yml
classification/: engines.py  model_cfg.json  runner.py  train.py
cloud_ops/: Dockerfile
docker/: Dockerfile
docs/iris/: autocapture.html  classify.html  criteria.html  data.html  index.html  litmodules.html  predict.html  train.html  transforms.html  utils.html
iris/: autocapture.py  classify.py  criteria.py  data.py  export.py  iris.json  litmodules.py  predict.py  train.py  transforms.py  utils.py
iris/configs/: classification.json  multilabel.json  segmentation.json
oak_capture/: Dockerfile  build_images.sh  displayPipeline.py  dummy_main.py  main.py  requirements.txt  setup_logging.py
oak_capture/oak_d/: OAKPipeline.py
oak_capture/processingPipelines/: dataCollectionPipeline.py  displayPipeline.py  facialLandmarkPipeline.py  processingPipeline.py
oak_classification/: engines.py  model_cfg.json  train.py
oak_d/: OAKPipeline.py
oak_d/configs/: mobilenet_spatial_ssd_config.json  (+1 more)
oak_detection/: engines.py  model_cfg.json  train.py
oak_generation/: engines.py  model_cfg.json
oak_object_detection/: engines.py  model_cfg.json  train.py
oak_segmentation/: model_cfg.json
processingPipelines/: processingPipeline.py
setup_files/: requirements.txt
tests/: iris.json  test_iris.py
(+30 files in other folders)
