[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=0

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    # Do not assign a lambda expression, use a def
    E731
    # Line break occurred after a binary operator
    W504
    # Module imported but unused
    F401
    # Local variable name is assigned to but never used
    F841
    # Invalid escape sequence 'x'
    W605
    # Too many leading '#' for block comment
    E266
    # Whitespace before ':'
    E203
    # Line break before binary operator
    W503

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
